ISPN-8397 Eviction parameter tuning